--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ tutorials/wassal/backkup/5_20_pneumoniamnist_ResNet18_0.0003_[0, 1]
 tutorials/wassal/backkup/5_pneumoniamnist_ResNet18_0.0003_[0, 1]
 tutorials/wassal/pneumoniamnist_ResNet18_0.0003_[0, 1]
 tutorials/wassal/pneumoniamnist_ResNet18_0.0003_[0, 1]
+tutorials/pneumoniamnist_ResNet18_0.0003_[0, 1]
